--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -10,10 +10,10 @@
 
     <title>Dashboard Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
-    <link href="asserts/css/bootstrap.min.css" rel="stylesheet">
+    <link href="asserts/css/bootstrap.min.css" th:href="@{/asserts/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="asserts/css/dashboard.css" rel="stylesheet">
+    <link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
     <style type="text/css">
         /* Chart.js */
 
@@ -50,36 +50,44 @@
         <div th:replace="commons/bar::#sidebar(activeUri='emps.html')"></div>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
             <form th:action="@{/emp}" method="post">
+                <!--
+                    发送put/delete请求
+                    1.springboot启用restful支持 spring.mvc.hiddenmethod.filter.enabled=true
+                    2.创建一个post表单
+                    3.创建一个input标签，name="_method",value="put/delete" type="hidden"
+                    -->
+                <input type="hidden" name="_method" value="put" th:if="${emp!=null}">
+                <input type="hidden" name="id" th:if="${emp!=null}" th:value="${emp.id}">
                 <div class="form-group">
                     <label for="exampleInputEmail1">lastName</label>
                     <input type="text" name="lastName" class="form-control" id="exampleInputEmail1"
-                           placeholder="Email">
+                           placeholder="Email" th:value="${emp}!=null?${emp.lastName}">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">email</label>
                     <input type="text" name="email" class="form-control" id="exampleInputPassword1"
-                           placeholder="Password">
+                           placeholder="Password" th:value="${emp}!=null?${emp.email}">
                 </div>
                 <div class="form-group">
                     <label for="inlineRadio1">gender</label>
                     <label class="radio-inline">
-                        <input type="radio" name="gender" id="inlineRadio1" value="0">女
+                        <input type="radio" name="gender" id="inlineRadio1" value="0" th:checked="${emp}!=null?${emp.gender==0}">女
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="gender" id="inlineRadio2" value="1">男
+                        <input type="radio" name="gender" id="inlineRadio2" value="1" th:checked="${emp}!=null?${emp.gender==1}">男
                     </label>
                 </div>
                 <div class="form-group">
                     <label>depart</label>
-                    <select class="form-control" name="department.id" >
-                        <option th:each="item : ${depts}" th:value="${item.id}" th:text="${item.departmentName}"></option>
+                    <select class="form-control" name="department.id">
+                        <option th:selected="${emp!=null}?${emp.department.id == item.id}" th:each="item : ${depts}" th:value="${item.id}" th:text="${item.departmentName}"></option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label >birth</label>
-                    <input type="text" name="birth" class="form-control">
+                    <input type="text" name="birth" class="form-control" th:value="${emp}!=null?${#dates.format(emp.birth,'yyyy-MM-dd')}">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default" th:text="${emp!=null}?'修改':'添加'"></button>
             </form>
         </main>
     </div>
