--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -72,23 +72,27 @@
                         <td th:text="${emp.email}"></td>
                         <td th:text="${emp.gender}==0?'女':'男'"></td>
                         <td th:text="${emp.department.departmentName}"></td>
-                        <td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                        <td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd')}"></td>
                         <td>
-                            <button class="btn btn-sm btn-primary">编辑</button>
-                            <button class="btn btn-sm btn-danger">编辑</button>
+                            <a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
+                            <button th:attr="del_url=@{/emp/}+${emp.id}" class="btn btn-sm btn-danger delBtn">删除
+                            </button>
                         </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
         </main>
+        <form method="post" id="delForm">
+            <input type="hidden" name="_method" value="delete"/>
+        </form>
     </div>
 </div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js"></script>
+<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js" th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
 <script type="text/javascript" src="asserts/js/popper.min.js"></script>
 <script type="text/javascript" src="asserts/js/bootstrap.min.js"></script>
 
@@ -101,35 +105,16 @@
 <!-- Graphs -->
 <script type="text/javascript" src="asserts/js/Chart.min.js"></script>
 <script>
-    var ctx = document.getElementById("myChart");
-    var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-            labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-            datasets: [{
-                data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-                lineTension: 0,
-                backgroundColor: 'transparent',
-                borderColor: '#007bff',
-                borderWidth: 4,
-                pointBackgroundColor: '#007bff'
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero: false
-                    }
-                }]
-            },
-            legend: {
-                display: false,
-            }
-        }
-    });
+    $(function () {
+        console.log('-------------------')
+        $('.delBtn').on('click', function () {
+            var delUrl = $(this).attr('del_url');
+            $('#delForm').attr('action', delUrl).submit();
+            return false;
+        })
+    })
+
 </script>
 
 </body>
-
 </html>
