--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -68,7 +68,7 @@
                     <tbody>
                     <tr th:each="emp:${emps}">
                         <td th:text="${emp.id}"></td>
-                        <td th:text="${emp.lastName}"></td>
+                        <td>[[${emp.lastName}]]</td>
                         <td th:text="${emp.email}"></td>
                         <td th:text="${emp.gender}==0?'女':'男'"></td>
                         <td th:text="${emp.department.departmentName}"></td>
